# floatchat

./: .gitignore  README.md  THINKING_INDICATOR_ENHANCEMENTS.md  WEBSOCKET_SETUP.md  package.json  pnpm-lock.yaml  test-websocket.html  trial.html  trial.js
apps/backend/: package.json  pyproject.toml  render.yaml  requirements.txt  tools.yaml
apps/backend/chroma_db/: chroma.sqlite3
apps/backend/src/backend/: main.py
apps/backend/src/backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/frontend/: package.json
apps/frontend/src/app/: layout.tsx  page.tsx
apps/frontend/src/app/welcome/: page.tsx
apps/frontend/src/components/: app-sidebar.tsx
apps/frontend/src/components/chats/: chat-input.tsx  chat-interface.tsx  chat-message.tsx  thinking-indicator.tsx  welcome-screen.tsx
apps/frontend/src/components/graphs/: ocean-data-graph.tsx
apps/frontend/src/components/onboard/: onboard-world.tsx
apps/frontend/src/components/onboard/data/: buoys.ts
apps/frontend/src/components/ui/: new-sidebar.tsx  sidebar.tsx
apps/frontend/src/contexts/: chat-context.tsx  websocket-context.tsx
apps/frontend/src/lib/: websocket.ts
apps/frontend/src/types/: react-plotly.d.ts  react-simple-maps.d.ts
